# rapids-cmake-testing

./: .gitignore  README.md  build-dev.sh  fetch_rapids.cmake
.devcontainer/: Dockerfile  devcontainer.json  initialize-command
cmake/Modules/: rapids-pybind11.cmake
cmake/Modules/pybind11/: create_modules.cmake  init.cmake
cmake/Modules/pybind11/detail/: verify_init.cmake
conda/: environment.yml
cpp/cwharris/: CMakeLists.txt
cpp/cwharris/src/: math.cpp
cpp/example/: CMakeLists.txt
cpp/example/include/example/: math.hpp
cpp/example/src/: math.cpp
cpp/example/tests/: CMakeLists.txt
python/cwharris/: CMakeLists.txt  setup.py
python/cwharris/cmake/Modules/: rapids-pybind11.cmake
python/cwharris/cmake/Modules/pybind11/: create_modules.cmake
python/cwharris/cwharris/: CMakeLists.txt  hello_cython.pyx  hello_pybind11_2.cpp
python/example/: CMakeLists.txt
python/example/example/: CMakeLists.txt  __init__.py  hello_pybind11.cpp
python/example/example/_lib/: CMakeLists.txt  add.cpp  hello.cpp  hello_cython.pyx
python/example/example/tests/: test_example.py  test_hello_cython.py  test_hello_pybind11.py
python/example/example/tests/_lib/: test_hello_cython.py  test_hello_pybind11.py
